syntax = "proto3";

package ledger;

// Represent a single event
message Event {
  string id = 1;
  string update_id = 2;
  string type = 3;  // 'created', 'archived', 'exercised', 'reassign_create', 'reassign_archive'
  string synchronizer = 4;

  int64 effective_at = 5;  // Unix epoch millis
  int64 recorded_at = 6;
  int64 created_at_ts = 7;

  string contract_id = 8;
  string template = 9;
  string package_name = 10;
  int64 migration_id = 11;

  repeated string signatories = 12;
  repeated string observers = 13;
  repeated string acting_parties = 14;  // For exercised events

  string payload_json = 15;  // create_arguments or choice_argument as JSON
  
  // Exercised event specific fields
  string choice = 16;
  bool consuming = 17;
  string interface_id = 18;
  repeated string child_event_ids = 19;
  string exercise_result_json = 20;
  
  // Reassignment event specific fields
  string source_synchronizer = 21;
  string target_synchronizer = 22;
  string unassign_id = 23;
  string submitter = 24;
  int64 reassignment_counter = 25;
  
  string raw_json = 26;  // Complete original event as JSON
  
  // Deprecated/unused - kept for backwards compatibility
  string party = 27;
}

// Represent a single update
message Update {
  string id = 1;
  string type = 2;  // 'transaction' or 'reassignment'
  string synchronizer = 3;

  int64 effective_at = 4;
  int64 recorded_at = 5;
  int64 record_time = 6;

  string command_id = 7;
  string workflow_id = 8;
  string kind = 9;  // For reassignments: 'assign' or 'unassign'
  
  int64 migration_id = 10;
  int64 offset = 11;
  
  repeated string root_event_ids = 12;
  int32 event_count = 13;
  
  string update_data_json = 14;  // Full update data as JSON
}

// A batch of records written together
message EventBatch {
  repeated Event events = 1;
}

message UpdateBatch {
  repeated Update updates = 1;
}